[gd_scene load_steps=24 format=2]

[ext_resource path="res://Asset/Ship/EnemyBos1.png" type="Texture" id=1]
[ext_resource path="res://Asset/Ship/DorOpenMedium.png" type="Texture" id=2]
[ext_resource path="res://Script/Enemy/EnemyBos1.gd" type="Script" id=3]
[ext_resource path="res://Asset/Ship/DorOpenSmall.png" type="Texture" id=4]
[ext_resource path="res://Asset/Ship/EnemyBos1TuretSmall.png" type="Texture" id=5]
[ext_resource path="res://Asset/Ship/EnemyBos1TuretBig.png" type="Texture" id=6]
[ext_resource path="res://Script/TuretFollow/TurretFollow.gd" type="Script" id=7]
[ext_resource path="res://Scene/Bullet/BulletBallEnemy.tscn" type="PackedScene" id=8]
[ext_resource path="res://Asset/Material/SmallBurnParticle.tres" type="Material" id=9]
[ext_resource path="res://Scene/Bullet/BulletBallSpecialEnemy.tscn" type="PackedScene" id=10]
[ext_resource path="res://Asset/Material/Smoke.material" type="Material" id=11]
[ext_resource path="res://Asset/Material/BurnMediumParticle.tres" type="Material" id=12]
[ext_resource path="res://Asset/Material/SmokeMedium.material" type="Material" id=13]

[sub_resource type="Animation" id=11]
resource_name = "BigTuretPopUp"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("MediumDor:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MediumDor/BigTuret:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MediumDor/BigTuret/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MediumDor/BigTuret:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 0.9, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.4, 0.4 ), Vector2( 0.6, 0.6 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MediumDor/BigTuret/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.7, 0.9, 1.1, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MediumDor/BigTuret:ready")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SmallDorL:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -35, 12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SmallDorL:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SmallDorL:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SmallDorR:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 35, 12 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SmallDorR:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SmallDorR:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SmallDorL:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SmallDorR:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("SmallDorL/SmallTuretL:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("SmallDorR/SmallTuretR:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("SmallDorR/SmallTuretR:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("SmallDorL/SmallTuretL:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("SmallDorL/SmallTuretL/Sprite:frame")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("SmallDorR/SmallTuretR/Sprite:frame")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("SmallDorL/SmallTuretL/CollisionShape2D:disabled")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("SmallDorR/SmallTuretR/CollisionShape2D:disabled")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("MediumDor:frame")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("MediumDor/BigTuret:visible")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("MediumDor/BigTuret/CollisionShape2D:disabled")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("MediumDor/BigTuret:scale")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ) ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("MediumDor/BigTuret/Sprite:frame")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("SmallDorL/SmallTuretL:ready")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/22/type = "value"
tracks/22/path = NodePath("SmallDorR/SmallTuretR:ready")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/23/type = "value"
tracks/23/path = NodePath("MediumDor/BigTuret:ready")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "SmallTuretPopOut"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("SmallDorL:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SmallDorR:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SmallDorL/SmallTuretL:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SmallDorR/SmallTuretR:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SmallDorR/SmallTuretR:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.4, 0.4 ), Vector2( 0.6, 0.6 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SmallDorL/SmallTuretL:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.4, 0.4 ), Vector2( 0.6, 0.6 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SmallDorL/SmallTuretL/Sprite:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SmallDorR/SmallTuretR/Sprite:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("SmallDorL/SmallTuretL/CollisionShape2D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("SmallDorR/SmallTuretR/CollisionShape2D:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("SmallDorL/SmallTuretL:ready")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("SmallDorR/SmallTuretR:ready")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 0.679688, 0, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
scale = 10.0
scale_curve = SubResource( 12 )
color = Color( 2, 2, 2, 1 )
color_ramp = SubResource( 3 )
hue_variation = 0.11
hue_variation_random = 1.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 8 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4, 3 )

[node name="EnemyBos1" type="KinematicBody2D"]
position = Vector2( 235, -200 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 3 )

[node name="TuretPopUpAnim" type="AnimationPlayer" parent="."]
anims/BigTuretPopUp = SubResource( 11 )
anims/RESET = SubResource( 9 )
anims/SmallTuretPopOut = SubResource( 10 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -1, -31 )
z_index = -1
amount = 15
fixed_fps = 15
local_coords = false
process_material = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, 1 )
z_index = -1
texture = ExtResource( 1 )
flip_v = true

[node name="MediumDor" type="Sprite" parent="."]
position = Vector2( -1, -5 )
z_index = -1
texture = ExtResource( 2 )
hframes = 2
vframes = 2

[node name="BigTuret" type="KinematicBody2D" parent="MediumDor" groups=["Enemy"]]
visible = false
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
z_index = 1
collision_layer = 2
collision_mask = 0
script = ExtResource( 7 )
healt = 12000
fire_rate = 3.0
bullet_scene = ExtResource( 10 )
muzzle_path = NodePath("Position2D")
target_group = "Player"

[node name="Sprite" type="Sprite" parent="MediumDor/BigTuret"]
rotation = 1.5708
texture = ExtResource( 6 )
offset = Vector2( 0, 14 )
hframes = 3
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="MediumDor/BigTuret"]
rotation = 1.5708
shape = SubResource( 7 )
disabled = true

[node name="Position2D" type="Position2D" parent="MediumDor/BigTuret"]
position = Vector2( -35, 0 )

[node name="Particles2D2" type="Particles2D" parent="MediumDor"]
modulate = Color( 2, 1.5, 1, 1 )
position = Vector2( 0, 2 )
emitting = false
amount = 20
lifetime = 6.0
fixed_fps = 15
local_coords = false
process_material = ExtResource( 13 )

[node name="Particles2D" type="Particles2D" parent="MediumDor"]
position = Vector2( 0, 2 )
emitting = false
amount = 40
lifetime = 3.0
fixed_fps = 15
local_coords = false
process_material = ExtResource( 12 )

[node name="SmallDorL" type="Sprite" parent="."]
position = Vector2( -35, 12 )
z_index = -1
texture = ExtResource( 4 )
hframes = 2
vframes = 2

[node name="SmallTuretL" type="KinematicBody2D" parent="SmallDorL" groups=["Enemy"]]
visible = false
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
z_index = 1
collision_layer = 2
collision_mask = 0
script = ExtResource( 7 )
healt = 3000
fire_rate = 1.0
bullet_scene = ExtResource( 8 )
muzzle_path = NodePath("Position2D")
target_group = "Player"

[node name="Sprite" type="Sprite" parent="SmallDorL/SmallTuretL"]
rotation = 1.5708
texture = ExtResource( 5 )
offset = Vector2( 0, 3 )
hframes = 2
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SmallDorL/SmallTuretL"]
rotation = 1.5708
shape = SubResource( 8 )
disabled = true

[node name="Position2D" type="Position2D" parent="SmallDorL/SmallTuretL"]
position = Vector2( -10, 0 )

[node name="Particles2D2" type="Particles2D" parent="SmallDorL"]
modulate = Color( 2, 1.5, 1, 1 )
position = Vector2( 0, 2 )
emitting = false
amount = 10
lifetime = 5.0
fixed_fps = 15
local_coords = false
process_material = ExtResource( 11 )

[node name="Particles2D" type="Particles2D" parent="SmallDorL"]
position = Vector2( 0, 2 )
emitting = false
amount = 20
fixed_fps = 15
local_coords = false
process_material = ExtResource( 9 )

[node name="SmallDorR" type="Sprite" parent="."]
position = Vector2( 35, 12 )
z_index = -1
texture = ExtResource( 4 )
hframes = 2
vframes = 2

[node name="SmallTuretR" type="KinematicBody2D" parent="SmallDorR" groups=["Enemy"]]
visible = false
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
z_index = 1
collision_layer = 2
collision_mask = 0
script = ExtResource( 7 )
healt = 3000
fire_rate = 1.0
bullet_scene = ExtResource( 8 )
muzzle_path = NodePath("Position2D")
target_group = "Player"

[node name="Sprite" type="Sprite" parent="SmallDorR/SmallTuretR"]
rotation = 1.5708
texture = ExtResource( 5 )
offset = Vector2( 0, 3 )
hframes = 2
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SmallDorR/SmallTuretR"]
rotation = 1.5708
shape = SubResource( 8 )
disabled = true

[node name="Position2D" type="Position2D" parent="SmallDorR/SmallTuretR"]
position = Vector2( -10, 0 )

[node name="Particles2D2" type="Particles2D" parent="SmallDorR"]
modulate = Color( 2, 1.5, 1, 1 )
position = Vector2( 0, 2 )
emitting = false
amount = 10
lifetime = 5.0
fixed_fps = 15
local_coords = false
process_material = ExtResource( 11 )

[node name="Particles2D" type="Particles2D" parent="SmallDorR"]
position = Vector2( 0, 2 )
emitting = false
amount = 20
fixed_fps = 15
local_coords = false
process_material = ExtResource( 9 )

[node name="Action2Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="death" from="MediumDor/BigTuret" to="." method="_on_BigTuret_death"]
[connection signal="death" from="SmallDorL/SmallTuretL" to="." method="_on_SmallTuretL_death"]
[connection signal="death" from="SmallDorR/SmallTuretR" to="." method="_on_SmallTuretR_death"]
[connection signal="timeout" from="Action2Timer" to="." method="_on_Action2Timer_timeout"]
